syntax = "proto3";

package relayer;

// ************ Relayer *******************
import "packet.proto";

//message AOIPacketSubRequest {}
message ValPacketSubRequest {
//  uint32 maxRate = 1; // In Mbps (*2^20 bit per second)
}
message SubscribePacketsResponse {
  oneof msg {
    packet.PacketBatchWrapper batch_list = 1;
    bool heartbeat = 2;
  }
}

service SubscribePackets {
//  rpc SubscribeAOIPackets(AOIPacketSubRequest) returns (stream SubscribePacketsResponse) {}
  rpc SubscribeValPackets (ValPacketSubRequest) returns (stream SubscribePacketsResponse) {}
}
